# competitor-intel-crew

./: README.md  pyproject.toml
output/: intelligence_report.md
src/competitor_intelligence/: crew.py  main.py
src/competitor_intelligence/config/: agents.yaml  tasks.yaml
src/competitor_intelligence/tools/: __init__.py  file_read_tool.py  file_writer_tool.py  scrape_tool.py  search_tool.py  sentiment_scrape_tool.py
