[project]
name = "competitor_intelligence"
version = "0.1.0"
description = "Competitor-Intelligence using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "crewai[litellm,tools]==1.14.2",
]

[project.scripts]
competitor_intelligence = "competitor_intelligence.main:run"
run_crew = "competitor_intelligence.main:run"
train = "competitor_intelligence.main:train"
replay = "competitor_intelligence.main:replay"
test = "competitor_intelligence.main:test"
run_with_trigger = "competitor_intelligence.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
